<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@xml/ic_menu_camera"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_share"
            android:icon="@xml/ic_menu_camera"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_help"
            android:icon="@xml/ic_menu_gallery"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@xml/ic_menu_slideshow"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/nav_quit"
            android:icon="@xml/ic_menu_manage"
            android:title="@string/menu_quit" />
    </group>

</menu>
